/ ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.html’ / ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.md’ / ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.pdf’ / ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex’ / ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes_stripped.md’ / ‘Complex Analysis/Review Doc/tex_tempfiles/Complex_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.md’ / ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.tex’ / ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes_stripped.md’

--- a/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
+++ b/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
@@ -100,6 +100,8 @@ Things to know well:
 \tightlist
 \item
   Virtually any time: consider \(1/f(z)\) and \(f(1/z)\).
+\item
+  Setting \(w=e^z\) is useful.
 \end{itemize}
 
 \begin{remark}[Showing a function is constant]
@@ -152,12 +154,6 @@ To count zeros:
 \end{itemize}
 
 \end{fact}
-
-\begin{itemize}
-\tightlist
-\item
-  Setting \(w=e^z\) is useful.
-\end{itemize}
 
 \hypertarget{basic-but-useful-facts}{%
 \subsection{Basic but Useful Facts}\label{basic-but-useful-facts}}
@@ -293,7 +289,7 @@ e^z &= \sum_{k\geq 0} {z^k \over k!} \\
   &= \sum_{k \geq 0} {z^k\over k} \quad {\left\lvert {z} \right\rvert} < 1 \\
 {\frac{\partial }{\partial z}\,} \sum_{k=0}^\infty a_k z^k 
   &= \sum_{k=0}^\infty a_{k+1}z^k \\
-\sqrt{1+x} = (1+x)^{1/2} 
+(1+x)^{1/2} 
   &= 1 + (1/2)x + {(1/2)(-1/2) \over 2!}x^2 + {(1/2)(-1/2)(-3/2) \over 3!}x^3 + \cdots \\
   &= 1 + {1\over 2} x - {1\over 8}x^2 + {1\over 16}x^3 - \cdots
 \end{align*}
@@ -309,6 +305,8 @@ Useful trick for expanding square roots:
 .\end{align*}
 
 \end{fact}
+
+\todo[inline]{Add series tricks.}
 
 \hypertarget{calculus-preliminaries}{%
 \section{Calculus Preliminaries}\label{calculus-preliminaries}}
