/ ‘Topology/ReviewDoc/TopologyQualifyingExamNotes.md’ / ‘Topology/ReviewDoc/TopologyQualifyingExamNotes.tex’ / ‘Topology/ReviewDoc/TopologyQualifyingExamNotes_stripped.md’

--- a/Topology/ReviewDoc/TopologyQualifyingExamNotes.tex
+++ b/Topology/ReviewDoc/TopologyQualifyingExamNotes.tex
@@ -318,7 +318,7 @@ clopen sets.
 Note that there is an additional condition for a subspace \(Y\subset X\)
 to be connected:
 \begin{align*}
-{ \operatorname{cl}} _{Y}(A) \cap V = A \cap{ \operatorname{cl}} _{Y}(B) = \emptyset
+{ \operatorname{cl}} _{Y}(A) \cap B = A \cap{ \operatorname{cl}} _{Y}(B) = \emptyset
 .\end{align*}
 
 \end{definition}
