/ ‘Algebra/Review Doc/AlgebraQualNotes.md’ / ‘Algebra/Review Doc/AlgebraQualNotes.tex’ / ‘Algebra/Review Doc/AlgebraQualNotes_stripped.md’

--- a/Algebra/Review Doc/AlgebraQualNotes.tex
+++ b/Algebra/Review Doc/AlgebraQualNotes.tex
@@ -4154,17 +4154,17 @@ is the intersection of all prime ideals \(p{~\trianglelefteq~}R\).
 
 \begin{definition}[Jacobson Radical]
 
-The \textbf{Jacobson radical} \(\jacrad{R}\) is the intersection of all
-maximal ideals, i.e.
+The \textbf{Jacobson radical} \({\sqrt{0_{R}} }\) is the intersection of
+all maximal ideals, i.e.
 \begin{align*}  
-\jacrad{R} = \displaystyle\bigcap_{{\mathfrak{m}}\in \operatorname{mSpec}R} {\mathfrak{m}}
+{\sqrt{0_{R}} } = \displaystyle\bigcap_{{\mathfrak{m}}\in \operatorname{mSpec}R} {\mathfrak{m}}
 .\end{align*}
 
 \end{definition}
 
 \begin{exercise}[?]
 
-Show \(x\in \jacrad{R} \iff 1-xR \subseteq R^{\times}\).
+Show \(x\in {\sqrt{0_{R}} } \iff 1-xR \subseteq R^{\times}\).
 
 \end{exercise}
 
